--- a/AcademiaLider/AcademiaLider.csproj
+++ b/AcademiaLider/AcademiaLider.csproj
@@ -47,10 +47,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CapaAccesoDatos\CadDocente.cs" />
+    <Compile Include="CapaAccesoDatos\CadEvento.cs" />
     <Compile Include="CapaAccesoDatos\CadInscripcion.cs" />
     <Compile Include="CapaAccesoDatos\CadParticipante.cs" />
+    <Compile Include="CapaLogicaNegocio\ClnDocente.cs" />
+    <Compile Include="CapaLogicaNegocio\ClnEvento.cs" />
     <Compile Include="CapaLogicaNegocio\ClnInscripcion.cs" />
     <Compile Include="CapaLogicaNegocio\ClnParticipante.cs" />
+    <Compile Include="CapaPresentacion\frmDocente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CapaPresentacion\frmDocente.Designer.cs">
+      <DependentUpon>frmDocente.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CapaPresentacion\frmEvento.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CapaPresentacion\frmEvento.Designer.cs">
+      <DependentUpon>frmEvento.cs</DependentUpon>
+    </Compile>
     <Compile Include="CapaPresentacion\frmInscripcion.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -82,10 +98,18 @@
       <DependentUpon>frmPrincipal.cs</DependentUpon>
     </Compile>
     <Compile Include="Core\ConexionBaseDatos.cs" />
+    <Compile Include="Entidades\Docente.cs" />
+    <Compile Include="Entidades\Evento.cs" />
     <Compile Include="Entidades\Inscripcion.cs" />
     <Compile Include="Entidades\Participante.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="CapaPresentacion\frmDocente.resx">
+      <DependentUpon>frmDocente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CapaPresentacion\frmEvento.resx">
+      <DependentUpon>frmEvento.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="CapaPresentacion\frmInscripcion.resx">
       <DependentUpon>frmInscripcion.cs</DependentUpon>
     </EmbeddedResource>
